force-app/main/default/objects/BL_FieldsMapping__mdt/fields/GetPicklistLabel__c.field-meta.xml
<CustomField>
    <fullName>GetPicklistLabel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Picklist Label</label>
    <type>Checkbox</type>
</CustomField>