force-app/main/default/objects/BL_FieldsMapping__mdt/fields/Is_InnerSelect__c.field-meta.xml
<CustomField>
    <fullName>Is_InnerSelect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is InnerSelect</label>
    <type>Checkbox</type>
</CustomField>