force-app/main/default/objects/BL_FieldsMapping__mdt/fields/Save_to_SF__c.field-meta.xml
<CustomField>
    <fullName>Save_to_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save to SF</label>
    <type>Checkbox</type>
</CustomField>