force-app/main/default/objects/BL_FieldsMapping__mdt/fields/UseCase__c.field-meta.xml
<CustomField>
    <fullName>UseCase__c</fullName>
    <label>Use Case</label>
    <referenceTo>BL_UseCase__mdt</referenceTo>
    <relationshipLabel>BL FieldsMappings (Use Case)</relationshipLabel>
    <relationshipName>BL_FieldsMappings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>